Убрана лишняя информация из резюме

--- a/static_site/index.html
+++ b/static_site/index.html
@@ -79,10 +79,6 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <div class="featured-image">
-                                    <img class="img-fluid project-image rounded shadow-sm" src="assets/img/portfolio/saas-platform.jpg" alt="SaaS платформа парсинга" onerror="this.src='assets_new/images/projects/project-featured.jpg'" />
-                                </div>
-
                                 <h3 class="title mb-3">SaaS-платформа парсинга и мониторинга данных</h3>
 
                                 <div class="desc text-start">
@@ -103,10 +99,7 @@
                             <hr class="divider" />
 
                             <div class="item row">
-                                <a class="col-md-4 col-12">
-                                <img class="img-fluid project-image rounded shadow-sm" src="assets_new/images/projects/project-1.png" alt="Система мониторинга" />
-                                </a>
-                                <div class="desc col-md-8 col-12">
+                                <div class="desc col-md-12 col-12">
                                     <h3 class="title">Система мониторинга и тестирования парсеров</h3>
                                     <p class="mb-2">Разработка сервиса для автоматического тестирования парсеров с уведомлениями через Telegram и push. Система сразу подсвечивает проблемные места в коде.</p>
                                     <p><strong>Результат:</strong> Сократила время восстановления (MTTR) с недели до 1-2 дней.</p>
@@ -115,10 +108,7 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <a class="col-md-4 col-12">
-                                <img class="img-fluid project-image rounded shadow-sm" src="assets_new/images/projects/project-2.png" alt="Система сбора данных" />
-                                </a>
-                                <div class="desc col-md-8 col-12">
+                                <div class="desc col-md-12 col-12">
                                     <h3 class="title">Система сбора данных (парсинг 80+ источников)</h3>
                                     <p class="mb-2">Проектирование и реализация системы парсинга данных о ценах и товарных остатках. Использование асинхронных воркеров, системы ротации прокси, семафоров и rate limiting.</p>
                                     <p class="mb-0"><strong>Стек:</strong> Python, Selenium, Playwright, BeautifulSoup4, Camoufox, Botasaurus, asyncio</p>
@@ -225,44 +215,128 @@
                             <div class="skillset">
 
                                 <div class="item">
-                                    <h3 class="level-title">Python, Django, FastAPI<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <h3 class="level-title">Python<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar progress">
-									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 95%" aria-valuenow="95"  aria-valuemin="0" aria-valuemax="100"></div>
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
 									</div><!--//level-bar-->
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">PostgreSQL, MySQL, ClickHouse<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <h3 class="level-title">Django<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar progress">
-									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 92%" aria-valuenow="92"  aria-valuemin="0" aria-valuemax="100"></div>
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
 									</div><!--//level-bar-->
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Kafka, RabbitMQ, Celery<span class="level-label"><i class="fas fa-info-circle"></i>Advanced</span></h3>
+                                    <h3 class="level-title">FastAPI<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">PostgreSQL<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">MySQL<span class="level-label"><i class="fas fa-info-circle"></i>Advanced</span></h3>
                                     <div class="level-bar progress">
 									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 88%" aria-valuenow="88"  aria-valuemin="0" aria-valuemax="100"></div>
 									</div><!--//level-bar-->
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Docker, CI/CD, Git<span class="level-label"><i class="fas fa-info-circle"></i>Advanced</span></h3>
+                                    <h3 class="level-title">ClickHouse<span class="level-label"><i class="fas fa-info-circle"></i>Advanced</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 85%" aria-valuenow="85"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Kafka<span class="level-label"><i class="fas fa-info-circle"></i>Advanced</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 87%" aria-valuenow="87"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">RabbitMQ<span class="level-label"><i class="fas fa-info-circle"></i>Advanced</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 88%" aria-valuenow="88"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Celery<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar progress">
 									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 90%" aria-valuenow="90"  aria-valuemin="0" aria-valuemax="100"></div>
 									</div><!--//level-bar-->
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Selenium, Playwright, Парсинг<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <h3 class="level-title">Docker<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar progress">
-									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 94%" aria-valuenow="94"  aria-valuemin="0" aria-valuemax="100"></div>
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
 									</div><!--//level-bar-->
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">REST API, WebSocket, Asyncio<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <h3 class="level-title">CI/CD<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Git<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Selenium<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Playwright<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar progress">
 									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 93%" aria-valuenow="93"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">BeautifulSoup<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 95%" aria-valuenow="95"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">REST API<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">WebSocket<span class="level-label"><i class="fas fa-info-circle"></i>Advanced</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 87%" aria-valuenow="87"  aria-valuemin="0" aria-valuemax="100"></div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Asyncio<span class="level-label"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <div class="level-bar progress">
+									    <div class="progress-bar level-bar-inner" role="progressbar" style="width: 98%" aria-valuenow="98"  aria-valuemin="0" aria-valuemax="100"></div>
 									</div><!--//level-bar-->
                                 </div><!--//item-->
 
