Добавлена плашка о поиске работы во второй колонке

--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
 
             </div><!--//primary-->
             <div class="secondary col-lg-4 col-12">
+                <div class="availability-badge shadow-sm rounded mb-3">
+                    <p data-i18n="availability"><i class="fas fa-briefcase"></i> Рассматриваю предложения о работе</p>
+                </div>
+
                  <aside class="info aside section">
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading sr-only">Контактная информация</h2>
